# DaoAI_Assessment1

./: README.md  q1.json
solution 1/: CMakeLists.txt  data_loader.cpp
solution 2/src/: main.cpp  query_engine.cpp
solution 2/tests/: query_engine_test.cpp
solution 3/: CMakeLists.txt
solution 3/src/: query_engine.cpp  query_engine.h
solution 3/tests/: query_engine_test.cpp
